Fixed speaking indicator not showing in bigger view inside vc's

--- a/midnight.css
+++ b/midnight.css
@@ -1128,8 +1128,12 @@ html.theme-light,
 }
 
 /* Circle arount speaking people */
-.avatarSpeaking_cdc675 {
+.avatarSpeaking_cdc675 .speaking_ba4b17 {
     box-shadow: inset 0 0 0 2px var(--online-indicator),inset 0 0 0 3px var(--background-secondary);
+}
+
+.border_ba4b17.speaking_ba4b17 {
+    box-shadow: inset 0 0 0 2px var(--online-indicator),inset 0 0 0 3px var(--black-500);
 }
 
 * {
